force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__APIName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__APIName__c</fullName>
        <description>The API Name of this content.</description>
        <inlineHelpText>The API Name of this content.</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>