force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__Description__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Description__c</fullName>
        <description>To describe where the text is located</description>
        <inlineHelpText>To describe where the text is located</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>