force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__Label__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Label__c</fullName>
        <description>This action’s label in the UI.</description>
        <inlineHelpText>This action’s label in the UI.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>