force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__Language__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Language__c</fullName>
        <description>The language code for this translation.</description>
        <inlineHelpText>The language code for this translation.</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>