force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__LineColumn__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LineColumn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The line column related to this content.</description>
        <inlineHelpText>The line column related to this content.</inlineHelpText>
        <label>Line Column</label>
        <referenceTo>SBQQ__LineColumn__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </CustomField>