force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__LongTextArea__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__LongTextArea__c</fullName>
        <description>This field stores translations for Long Text fields.</description>
        <inlineHelpText>This field stores translations for Long Text fields.</inlineHelpText>
        <label>Long Text Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>