force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__PriceDimension__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Dimension related to this content.</description>
        <inlineHelpText>The Dimension related to this content.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </CustomField>