force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product related to this content.</description>
        <inlineHelpText>The product related to this content.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </CustomField>