force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__ProductFeature__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product feature related to this content.</description>
        <inlineHelpText>The product feature related to this content.</inlineHelpText>
        <label>Product Feature</label>
        <referenceTo>SBQQ__ProductFeature__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </CustomField>