force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__ProductOption__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product option that generated this line.</description>
        <inlineHelpText>The product option that generated this line.</inlineHelpText>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </CustomField>