force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__QuoteTemplate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The template to use for this content.</description>
        <inlineHelpText>The template to use for this content.</inlineHelpText>
        <label>Quote Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </CustomField>