force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__QuoteTerm__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent term for this term.</description>
        <inlineHelpText>The parent term for this term.</inlineHelpText>
        <label>Quote Term</label>
        <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </CustomField>