force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__RichTextArea__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RichTextArea__c</fullName>
        <description>This field stores translations for Rich Text fields.</description>
        <inlineHelpText>This field stores translations for Rich Text fields.</inlineHelpText>
        <label>Rich Text Area</label>
        <length>32768</length>
        <type>Html</type>
    </CustomField>