force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__TemplateContent__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TemplateContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The template content to use for this content.</description>
        <inlineHelpText>The template content to use for this content.</inlineHelpText>
        <label>Template Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Localizations</relationshipLabel>
        <relationshipName>Localizations</relationshipName>
        <type>Lookup</type>
    </CustomField>