force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__Text__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Text__c</fullName>
        <description>This field stores translations for Text fields.</description>
        <inlineHelpText>This field stores translations for Text fields.</inlineHelpText>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>