force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__TextArea__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TextArea__c</fullName>
        <description>This field stores translations for Text Area fields.</description>
        <inlineHelpText>This field stores translations for Text Area fields.</inlineHelpText>
        <label>Text Area</label>
        <type>TextArea</type>
    </CustomField>