force-app/main/default/objects/SBQQ__Localization__c/fields/SBQQ__UserDefined__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UserDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate whether this field is user-defined or not.</description>
        <inlineHelpText>To indicate whether this field is user-defined or not.</inlineHelpText>
        <label>User Defined</label>
        <type>Checkbox</type>
    </CustomField>