force-app/main/default/objects/SBQQ__Localization__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Language__c</columns>
        <columns>SBQQ__Label__c</columns>
        <columns>SBQQ__APIName__c</columns>
        <columns>SBQQ__QuoteTemplate__c</columns>
        <columns>SBQQ__LineColumn__c</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>SBQQ__ProductOption__c</columns>
        <columns>SBQQ__ProductFeature__c</columns>
        <columns>SBQQ__QuoteTerm__c</columns>
        <columns>SBQQ__Text__c</columns>
        <columns>SBQQ__TextArea__c</columns>
        <columns>SBQQ__LongTextArea__c</columns>
        <columns>SBQQ__RichTextArea__c</columns>
        <columns>SBQQ__UserDefined__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>